--- a/src/app/modulos/estudiantes/pages/faq/faq.component.html
+++ b/src/app/modulos/estudiantes/pages/faq/faq.component.html
@@ -10,19 +10,33 @@
 
     <div id="accordion">
         <div class="card">
-            <div class="card-header" id="headingOne">
+            <div class="card-header" id="heading4">
                 <h5 class="mb-0">
-                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
-              </button>
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                        ¿Donde puedo ver los próximos temas de la aplicación?
+                    </button>
                 </h5>
             </div>
 
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordion">
                 <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                    on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    Constantemente estamos actualizando e integrando temas nuevos a la aplicación. Puedes verlo a traves del temario que se encuentra en el menu lateral izquierdo, o <a [routerLink]="['/estudiantes/temario']">haz click aquí.</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        ¿Se puede usar la plataforma sin conexión a internet una vez que se acceda?
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                <div class="card-body">
+                    En un principio, si.
+                    <br><br> Si el usuario ya esta dentro de la aplicación y esta se encuentra cargada correctamente, podremos ver los modelos sin conexión sin problema alguno.
                 </div>
             </div>
         </div>
@@ -30,15 +44,14 @@
             <div class="card-header" id="headingTwo">
                 <h5 class="mb-0">
                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
-              </button>
+                        No puedo ver un modelo, ¿que debo hacer para ver el modelo?
+                    </button>
                 </h5>
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                    on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    Primero hay que confirmar que nuestra licencia de uso se encuentre activa, si el caso es correcto lo siguiente seria verificar nuestra conexión a internet en alguna otra web. <br><br> <br> Si el problema persiste, conectactenos al
+                    correo hola@dritdi.mx y resolveremos el problema cuando antes.
                 </div>
             </div>
         </div>
@@ -46,18 +59,18 @@
             <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
-              </button>
+                        No carga la aplicación una vez accesando, ¿qué pasa?
+                    </button>
                 </h5>
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                    on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    En caso de que la aplicación no cargue, posiblemente tenemos un dispositivo no compatible con WebGL, Como es el caso de algunos smartphones antiguos o una versión de internet explorer menor a la 11.
+                    <br><br> También debemos verificar nuestra conexion a internet en alguna otra web.
                 </div>
             </div>
         </div>
     </div>
 
+    <p class="text-center text-white pt-3">¿Tienes otro problema? Contactanos al correo hola@dritdi.mx y trataremos de resolverlo lo antes posible.</p>
 </div>
