--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -8,14 +8,25 @@
                     src="assets/img/logo.png"
                     alt="bootstraper logo"
                   />                </div>
-                <h5 class="mb-1 text-muted">Cambiar Contraseña</h5>
+                <h5 class="mb-1 text-muted">Recuperar Contraseña</h5>
 
-                <form action="" method="">
+                <form [formGroup]="ForgotPasswordForm" (ngSubmit)="Send()">
                     <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Ingresa tu correo" required>
+                        <input formControlName="email" type="email" class="form-control" placeholder="Ingresa tu correo" required>
                     </div>
-                    <button class="btn w-75 bg-blue text-white shadow-2 mt-4 mb-4">Cambiar</button>
+                    <button class="btn w-75 bg-blue text-white shadow-2 mt-4 mb-4" type="submit" [disabled]="!ForgotPasswordForm.valid">
+                        Solicitar recuperación
+                    </button>
                 </form>
+
+                <div *ngIf="result.error" class="alert alert-danger" role="alert">
+                    {{result.msg}}
+                </div>
+
+                <div *ngIf="result.error === false && result.msg != ''" class="alert alert-primary" role="alert">
+                    {{result.msg}}
+                </div>
+
                 <p class="mb-0 text-muted">¿No tienes una cuenta? <a class="color-blue" routerLink="/signup">Registrate</a></p>
             </div>
         </div>
