Página de inicio sin auth
Ahora la páginas de inicio se pueden ver sin iniciar sesión, y el botón de ir a la aplicación dirige al formulario de registro.

--- a/src/app/modulos/estudiantes/pages/home/home.component.html
+++ b/src/app/modulos/estudiantes/pages/home/home.component.html
@@ -27,7 +27,9 @@
             <img class="img-fluid rounded mb-4 mb-lg-0" src="./assets/img/craneo.gif" alt="">
         </div>
         <div class="col-lg-7">
-            <h1 class="font-weight-light text-white">¡Bienvenido a Dritdi <br> {{authS.UserClass.FormatedName | titlecase }}!</h1>
+            <h1 *ngIf="authS.isLoggedIn" class="font-weight-light text-white">¡Bienvenido a Dritdi <br> {{authS.UserClass.FormatedName | titlecase }}!</h1>
+            <h1 *ngIf="!authS.isLoggedIn" class="font-weight-light text-white">¡Bienvenido a Dritdi!</h1>
+
             <p class="text-white">
                 Dritdi es el futuro de la educación: <br> <br> ¡Permite a los estudiantes y maestros la observación de 3D en materia cientifica como AnatomÍa, Biología, Microbiología, y mucho más!
             </p>
