--- a/src/app/modulos/estudiantes/estudiantes.component.html
+++ b/src/app/modulos/estudiantes/estudiantes.component.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav ml-auto">
 
-                    <li *ngIf="authS.UserClass.IsAdmin" class="nav-item dropdown">
+                    <li *ngIf="authS.isLoggedIn && authS.UserClass.IsAdmin" class="nav-item dropdown">
                         <div class="nav-dropdown">
                             <a href="" class="nav-item nav-link dropdown-toggle text-secondary" data-toggle="dropdown">
                                 <i class="fas fa-link mr-2"></i> <span>Enlaces rápidos</span>
@@ -44,8 +44,13 @@
                             </div>
                         </div>
                     </li>
-
-                    <li class="nav-item dropdown">
+                    <li *ngIf="!authS.isLoggedIn" class="nav-item">
+                        <a [routerLink]="['/login']" class="nav-item nav-link text-white">
+                            <i class="fas fa-user mr-2"></i>
+                            <span>Iniciar Sesión</span>
+                        </a>
+                    </li>
+                    <li *ngIf="authS.isLoggedIn" class="nav-item dropdown">
                         <div class="nav-dropdown">
                             <a href="" class="nav-item nav-link dropdown-toggle text-white" data-toggle="dropdown">
                                 <i class="fas fa-user mr-2"></i>
