--- a/src/app/modulos/estudiantes/pages/contacto/contacto.component.html
+++ b/src/app/modulos/estudiantes/pages/contacto/contacto.component.html
@@ -53,13 +53,13 @@
             <div class="container-fluid pt-5 mt-3">
                 <div class="row">
 
-                    <div class="col-4">
+                    <!-- <div class="col-4">
                         <h5 class="text-center">
                             <span class="badge badge-pill badge-success p-3">
                                 <i class="fab fa-whatsapp mr-2" aria-hidden="true"></i>99 33 30 08 78
                             </span>
                         </h5>
-                    </div>
+                    </div> -->
 
                     <div class="col-4">
                         <h5 class="text-center">
