--- a/src/app/modulos/estudiantes/pages/faq/faq.component.html
+++ b/src/app/modulos/estudiantes/pages/faq/faq.component.html
@@ -51,7 +51,7 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
                     Primero hay que confirmar que nuestra licencia de uso se encuentre activa, si el caso es correcto lo siguiente seria verificar nuestra conexión a internet en alguna otra web. <br><br> <br> Si el problema persiste, conectactenos al
-                    correo hola@dritdi.mx y resolveremos el problema cuando antes.
+                    correo gamemaster@dritdi.mx y resolveremos el problema cuando antes.
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="card-header" id="headingThree">
                 <h5 class="mb-0">
                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        No carga la aplicación una vez accesando, ¿qué pasa?
+                        No carga la aplicación, ¿qué pasa?
                     </button>
                 </h5>
             </div>
@@ -72,5 +72,5 @@
         </div>
     </div>
 
-    <p class="text-center text-white pt-3">¿Tienes otro problema? Contactanos al correo hola@dritdi.mx y trataremos de resolverlo lo antes posible.</p>
+    <p class="text-center text-white pt-3">¿Tienes otro problema? Contactanos al correo gamemaster@dritdi.mx y trataremos de resolverlo lo antes posible.</p>
 </div>
