--- a/src/app/modulos/estudiantes/pages/home/home.component.html
+++ b/src/app/modulos/estudiantes/pages/home/home.component.html
@@ -31,7 +31,7 @@
             <h1 *ngIf="!authS.isLoggedIn" class="font-weight-light text-white">¡Bienvenido a Dritdi!</h1>
 
             <p class="text-white">
-                Dritdi es el futuro de la educación: <br> <br> ¡Permite a los estudiantes y maestros la observación de 3D en materia cientifica como AnatomÍa, Biología, Microbiología, y mucho más!
+                Dritdi es el futuro de la educación: <br> <br> ¡Permite a los usuarios observar modelos 3D de AnatomÍa, Biología, Microbiología, y mucho más!
             </p>
             <a routerLink="/estudiantes/app" class="btn bg-blue text-white text-center animated infinite pulse w-100">Ir a la aplicación</a>
         </div>
@@ -57,7 +57,7 @@
                         Modelos 3D Inmersivos
                     </h2>
                     <p class="card-text text-justify">
-                        La observación tridimensional de las partes anatómicas incrementa el aprendizaje y la comprsión de la forma de un entorno realista que facilita la asimilación de la información.
+                        La observación tridimensional de las partes anatómicas incrementa el aprendizaje y la comprensión de la forma de un entorno realista que facilita la asimilación de la información.
                     </p>
                 </div>
             </div>
@@ -100,7 +100,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <p class="card-text text-justify">
-                        Asegurate de tener una licencia de estuiante activa o contacta a hola@dritdi.mx, navega hacia la pagina
+                        Asegurate de tener una licencia de estudiante activa o contacta a gamemaster@dritdi.mx, navega hacia la pagina
                         <a href="http://www.dritdi.mx" target="_blank">Dritdi.mx</a> e inicia sesión. En la página de inicio haz click en "Ir a la aplicación", espera a que el contenido cargue y comienza a aprender.
                     </p>
                 </div>
@@ -121,7 +121,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <p class="card-text text-justify">
-                        Piedes interactuar con el modelo 3D dejando el click izquierdo presionado en el modelo y moviendo el mouse, de esta manera puedes explorar cada parte del modelo 3D, en algunos modelos puede haber diferentes botones y efectos que permiten una mejor interacción.
+                        Puedes interactuar con el modelo 3D dejando el click izquierdo presionado en el modelo y moviendo el mouse, de esta manera puedes explorar cada parte del modelo 3D, en algunos modelos puede haber diferentes botones y efectos que permiten una mejor interacción.
                     </p>
                 </div>
             </div>
