--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -35,7 +35,7 @@
                 </form>
                 <p class="mb-2 text-muted">
                     ¿Olvidaste tu Contraseña?
-                    <a class="color-blue" routerLink="/forgot-password">Reestablece tu contraseña</a>
+                    <a class="color-blue" routerLink="/forgot-password">Restablece tu contraseña</a>
                 </p>
                 <p class="mb-0 text-muted">
                     ¿Aún no tienes una cuenta? <a class="color-blue" routerLink="/signup">Regístrate</a>
