--- a/src/app/modulos/estudiantes/pages/temario/temario.component.html
+++ b/src/app/modulos/estudiantes/pages/temario/temario.component.html
@@ -161,7 +161,7 @@
     <div class="card-deck">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Sistema digestivo,</h5>
+                <h5 class="card-title">Sistema digestivo</h5>
             </div>
 
         </div>
