--- a/src/app/modulos/dashboard/pages/home/home.component.html
+++ b/src/app/modulos/dashboard/pages/home/home.component.html
@@ -6,12 +6,12 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="icon-big text-center">
-                <i class="teal fas fa-shopping-cart"></i>
+                <i class="teal fas fa-users"></i>
               </div>
             </div>
             <div class="col-sm-8">
               <div class="detail text-center">
-                <p>New Orders</p>
+                <p>Usuarios registrados</p>
                 <span class="number">6,267</span>
               </div>
             </div>
@@ -31,13 +31,13 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="icon-big text-center">
-                <i class="olive fas fa-money-bill-alt"></i>
+                <i class="olive fas fa-female"></i>
               </div>
             </div>
             <div class="col-sm-8">
               <div class="detail text-center">
-                <p>Revenue</p>
-                <span class="number">$180,900.00</span>
+                <p>Usuarios femeninos</p>
+                <span class="number">180,900</span>
               </div>
             </div>
           </div>
@@ -56,12 +56,12 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="icon-big text-center">
-                <i class="violet fas fa-eye"></i>
+                <i class="violet fas fa-male"></i>
               </div>
             </div>
             <div class="col-sm-8">
               <div class="detail text-center">
-                <p>Page views</p>
+                <p>Usuarios masculinos</p>
                 <span class="number">28,210</span>
               </div>
             </div>
@@ -81,12 +81,12 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="icon-big text-center">
-                <i class="orange fas fa-envelope"></i>
+                <i class="orange fas fa-transgender"></i>
               </div>
             </div>
             <div class="col-sm-8">
               <div class="detail text-center">
-                <p>Support Request</p>
+                <p>Usuarios N/A</p>
                 <span class="number">75</span>
               </div>
             </div>
@@ -94,7 +94,7 @@
           <div class="footer">
             <hr />
             <div class="stats">
-              <i class="fas fa-envelope-open-text"></i> Active in the last 7
+              <i class="fas fa-transgender"></i> Active in the last 7
               days
             </div>
           </div>
